loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:11: error: '}' expected but 'case' found.
  nbPase case{
         ^Poucet2:18: error: 'while' expected but '}' found.
} while(sortieTrouvee()!=true) 
^Poucet2:18: error: ';' expected but 'while' found.
} while(sortieTrouvee()!=true) 
  ^Poucet2:21: error: eof expected but '}' found.
}
^