loopdowhile.Poucet2.scala.code
do {
  
  var nbPas: Int=0;
  
	do{
    
    avance();
    if(estSurBiscuit()){nbPas=nbPas+1;}
  } while(crossing()!=true)  
  
  nbPase case{
    
    
    
  }
  
  
} while(sortieTrouvee()!=true)